--- a/request.html
+++ b/request.html
@@ -105,7 +105,7 @@
                 <input id="phone" type="tel" placeholder="Phone*">
                 <input id="email" type="email" placeholder="Email*">
               </div>
-              <div class="request_block_left_one_next">
+              <div class="request_block_left_one_next btn">
                 <span>Next</span>
               </div>
             </div>
@@ -142,7 +142,7 @@
                   <p>Landlord Rep</p>
                 </div>
               </div>
-              <div class="request_block_left_two_next">
+              <div class="request_block_left_two_next btn">
                 <span>Next</span>
               </div>
             </div>
@@ -156,7 +156,7 @@
                 <input id="propertyCity" type="text" placeholder="Property City*">
                 <input id="propertyState" type="email" placeholder="Property State*">
               </div>
-              <div class="request_block_left_three_next">
+              <div class="request_block_left_three_next btn">
                 <span>Submit</span>
               </div>
             </div>
