--- a/single_transactions.html
+++ b/single_transactions.html
@@ -102,10 +102,10 @@
                 <img src="img/single_transactions/1.jfif" alt="">
               </div>
               <div class="single_trans_block_left_slider_item">
-                <img src="img/single_transactions/1.jfif" alt="">
+                <img src="img/representation/2.jfif" alt="">
               </div>
               <div class="single_trans_block_left_slider_item">
-                <img src="img/single_transactions/1.jfif" alt="">
+                <img src="img/representation/3.jfif" alt="">
               </div>
             </div>
             <button class="single_trans_block_left_next">
@@ -114,42 +114,42 @@
           </div>
           <div class="single_trans_block_right anime">
             <div class="single_trans_block_right_item">
-              <img src="img/single_transactions/users.png" alt="">
+              <img src="img/single_transactions/users.svg" alt="">
               <div class="single_trans_block_right_item_text">
                 <h4>Client:</h4>
                 <p>Kimco Realty</p>
               </div>
             </div>
             <div class="single_trans_block_right_item">
-              <img src="img/single_transactions/location.png" alt="">
+              <img src="img/single_transactions/location.svg" alt="">
               <div class="single_trans_block_right_item_text">
                 <h4>Location:</h4>
                 <p>Suffolk County, New York</p>
               </div>
             </div>
             <div class="single_trans_block_right_item">
-              <img src="img/single_transactions/gla.png" alt="">
+              <img src="img/single_transactions/gla.svg" alt="">
               <div class="single_trans_block_right_item_text">
                 <h4>GLA:</h4>
                 <p>387K SF</p>
               </div>
             </div>
             <div class="single_trans_block_right_item">
-              <img src="img/single_transactions/building.png" alt="">
+              <img src="img/single_transactions/building.svg" alt="">
               <div class="single_trans_block_right_item_text">
                 <h4>Tenants:</h4>
                 <p>Walmart, Big Lots, JOANN</p>
               </div>
             </div>
             <div class="single_trans_block_right_item">
-              <img src="img/single_transactions/date.png" alt="">
+              <img src="img/single_transactions/date.svg" alt="">
               <div class="single_trans_block_right_item_text">
                 <h4>Closing:</h4>
                 <p>February 2021</p>
               </div>
             </div>
             <div class="single_trans_block_right_item">
-              <img src="img/single_transactions/money.png" alt="">
+              <img src="img/single_transactions/money.svg" alt="">
               <div class="single_trans_block_right_item_text">
                 <h4>Sale Price:</h4>
                 <p>$52.5 Million</p>
@@ -172,14 +172,14 @@
               <a href="#" class="single_trans_bottom_right_list_item">
                 <img class="single_trans_bottom_right_list_item_main" src="img/transactions/1.jfif" alt="">
                 <img class="single_trans_bottom_right_list_item_logo" src="img/transactions/logo_1.svg" alt="">
-                <button class="single_trans_bottom_right_list_item_btn">
+                <button class="single_trans_bottom_right_list_item_btn btn">
                   <span>VIEW details</span>
                 </button>
               </a>
               <a href="#" class="single_trans_bottom_right_list_item">
                 <img class="single_trans_bottom_right_list_item_main" src="img/transactions/2.jfif" alt="">
                 <img class="single_trans_bottom_right_list_item_logo" src="img/transactions/logo_2.svg" alt="">
-                <button class="single_trans_bottom_right_list_item_btn">
+                <button class="single_trans_bottom_right_list_item_btn btn">
                   <span>VIEW details</span>
                 </button>
               </a>
