--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
 
     <section class="news_front">
       <div class="container">
-        <div class="news_front_top">
-          <h2 class="anime">News</h2>
-          <a class="anime" href="#">
+        <div class="news_front_top anime">
+          <h2>News</h2>
+          <a class="btn" href="#">
             <span>VIEW MORE News</span>
           </a>
         </div>
