--- a/landlord.html
+++ b/landlord.html
@@ -170,7 +170,7 @@
           <div class="calendly_block_text anime">
             <h2>Lorem ipsum dolor sit amet</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-            <a href="#">
+            <a href="#" class="btn">
               <span>Contact me</span>
             </a>
           </div>
